--- a/archives/2019-09-19/newsletter.mjml
+++ b/archives/2019-09-19/newsletter.mjml
@@ -10,59 +10,46 @@
         <mj-image src="https://cancarner.cat/wp-content/uploads/2019/08/logo_natural.png" alt="Can Carner" padding-bottom="0px" padding-top="0px" href="https://cancarner.cat/"></mj-image>
       </mj-column>
     </mj-section>
-    <mj-section vertical-align="middle" background-url="https://cancarner.cat/wp-content/uploads/2019/08/TITOLS.jpg" background-size="cover" background-repeat="no-repeat" padding-top="450px">
+    <mj-section vertical-align="middle" background-url="https://cancarner.cat/wp-content/uploads/2019/09/news_n3_capçalera-e1568824505364.png" background-size="cover" background-repeat="no-repeat" padding-top="180px">
     </mj-section>
     <mj-section vertical-align="middle" background-color="#d03c15">
       <mj-column width="100%" vertical-align="middle">
-        <mj-text align="left" font-size="14px" color="#ffffff" padding-bottom="0px" padding-top="0px"><span style="font-size: 24px; line-height: 30px;"><b>Tenim 200.000 raons per donar-te les gràcies!</b></span></mj-text>
+        <mj-text align="center" font-size="14px" color="#ffffff" padding-bottom="0px" padding-top="0px"><span style="font-size: 24px; line-height: 30px;"><b>Tenim 200.000 raons per donar-te les <br/><span style="font-size:30px; line-height: 40px;">GRÀCIES!</span></b></span></mj-text>
       </mj-column>
     </mj-section>
     <mj-section vertical-align="middle" background-color="#ffffff">
       <mj-column width="100%" vertical-align="middle">
-          <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">Desprès de 40 dies d'intensa campanya fent un esforç titànic per arribar arreu i comptant sempre amb la teva complicitat, podem dir que ho hem aconseguit!</mj-text>
-          <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">Moltes gràcies per tots els granets de sorra, esforços i bons desitjos que ens heu fet arribar.</mj-text>
-        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px"><b>Can Carner serà possible gràcies a tu!</b></mj-text>        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">La campanya ha estat tot un èxit, tant, que algunes de vosaltres us heu quedat fora i ens heu encoratjat a poder fer una petita ampliació de la campanya per tal de poder participar-hi.  </mj-text>
-        <mj-text align="justify" font-size="16px" line-height="24px" color="#45474e" padding-bottom="10px" padding-top="10px"><b>Ampliar la campanya de títols participatius si ja s'ha assolit la fita de 200.000?</b></mj-text>
-        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">Doncs sí, ho has llegit bé, ja que hem valorat que ampliar la campanya en temps i en títols és favorable perquè...
-        <ul>
-            <li>Mitjançant el finançament col·laboratiu podem seguir avançant cap a una societat més cooperativa i solidària entre la gent</li>
-            <li>Ens possibilita no haver de dependre de la banca tradicional</li>
-            <li>La diversificació de fonts de finançament i la permeabilitat d'aquestes permet donar solidesa econòmica i social al projecte.</li>
-            <li>Facilita un cert alleugeriment de la pressió de les sòcies d'ús les quals estem fent un gran esforç per tal de realitzar aquest projecte, donat que la inversió inicial és molt elevada, tenint en compte la compra i despeses administratives i legals que suposa l'inici.</li>
-            <li>Volem que totes les que ens heu fet arribar les vostres ganes de participar i no heu estat a temps pugueu fer-ho.</li>
+        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">Desprès de 40 dies d'intensa campanya fent un esforç titànic per arribar arreu i comptant sempre amb la teva complicitat, podem dir que ho hem aconseguit!</mj-text>
+        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">Moltes gràcies per tots els granets de sorra, esforços i bons desitjos que ens heu fet arribar.</mj-text>
+        <mj-text align="center" font-size="20px" color="#d03c15" padding-bottom="10px" padding-top="10px" line-height="18px"><b>Can Carner serà possible gràcies a tu!</b></mj-text>
+        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">La campanya ha estat tot un èxit, tant, que algunes de vosaltres us heu quedat fora i ens heu encoratjat a poder fer una petita ampliació de la campanya per tal de poder participar-hi.  </mj-text>
+        <mj-text align="justify" font-size="16px" line-height="24px" color="#d03c15" padding-bottom="10px" padding-top="10px"><b>Ampliar la campanya de títols participatius si ja s'ha assolit la fita de 200.000?</b></mj-text>
+        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="0px" padding-top="10px" line-height="18px">Doncs sí, ho has llegit bé, ja que hem valorat que ampliar la campanya en temps i en títols és favorable perquè:
+        <ul style="margin-bottom:5px">
+          <li>Mitjançant el finançament col·laboratiu podem seguir avançant cap a una societat més cooperativa i solidària entre la gent</li>
+          <li>Ens possibilita no haver de dependre de la banca tradicional</li>
+          <li>La diversificació de fonts de finançament i la permeabilitat d'aquestes permet donar solidesa econòmica i social al projecte.</li>
+          <li>Facilita un cert alleugeriment de la pressió de les sòcies d'ús les quals estem fent un gran esforç per tal de realitzar aquest projecte, donat que la inversió inicial és molt elevada, tenint en compte la compra i despeses administratives i legals que suposa l'inici.</li>
+          <li>Volem que totes les que ens heu fet arribar les vostres ganes de participar i no heu estat a temps pugueu fer-ho.</li>
         <ul/>
         </mj-text>
         <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">Així doncs, ens sobren els motius per seguir fomentant el finançament col·lectiu i participatiu d'aquest projecte!</mj-text>
-        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">El finançament per efectuar la compra de la masia prové de les aportacions obligatòries de les sòcies de dret d'ús, d'aportacions voluntàries que faran també les mateixes famílies i del finançament col·lectiu a través de la campanya de títols participatius i de préstecs personals i aportacions voluntàries de les sòcies.</mj-text>
+        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">El finançament per efectuar la compra de la masia prové de les aportacions obligatòries de les sòcies de dret d'ús, d'aportacions voluntàries que faran també les mateixes famílies i del finançament col·lectiu: a través de la campanya de títols participatius i de préstecs personals i aportacions voluntàries de les sòcies.</mj-text>
         <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">Però un projecte d'aquesta envergadura és molt gran i haurem de fer front a moltes altres despeses que se'ns presenten d'ara endavant.</mj-text>
         <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">És per això, que encara que hem arribat al nostre objectiu, hem decidit ampliar la campanya unes setmanes més. La família de Can Carner va creixent i estem emocionades i orgulloses que així sigui.</mj-text>
-        <mj-text align="justify" font-size="16px" line-height="24px" color="#45474e" padding-bottom="10px" padding-top="10px"><b>Esteu dient que la campanya d'adquisició de títols sempre romandrà oberta?</b></mj-text>
-        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">No. Aquesta nova ampliació acabarà quan un d'aquests dos supòsits es arribi:
-        <ul>
-        <li>Fins a assolir els 1.000 títols més que es posen a disposició.</li>
-        <li>Fins a assolir la data de tancament de campanya el dia 20 d'octubre.</li>
+        <mj-text align="justify" font-size="16px" line-height="24px" color="#d03c15" padding-bottom="10px" padding-top="10px"><b>Esteu dient que la campanya d'adquisició de títols sempre romandrà oberta?</b></mj-text>
+        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="0px" padding-top="10px" line-height="18px">No. Aquesta nova ampliació acabarà quan un d'aquests dos supòsits arribi:
+        <ul style="margin-bottom:5px">
+          <li>Fins a assolir els 1.000 títols més que es posen a disposició.</li>
+          <li>Fins a assolir la data de tancament de campanya el dia 20 d'octubre.</li>
         </ul>
         </mj-text>
-        <!--mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px"><img src="https://cancarner.cat/interrogant/" align="bottom"/></mj-text>
-        <mj-text align="justify" font-size="16px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="24px"><b>I a partir del 20 d'octubre ja no podrem col·laborar amb Can Carner?</b></mj-text>
-        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">I tant que sí, la possibilitat de participar sempre estarà oberta. A partir d'aquest moment, seguirà existint les altres formes de finançament col·lectiu presents fins ara:
-        <ul>
-        <li>Possibilitat de fer-te sòcia.</li>
-        <li>Possibilitat d'adquirir préstecs personals.</li>
-        </ul>
-        Aquestes possibilitats permetran donar estabilitat al projecte a llarg termini.
-        </mj-text-->
-        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">Volem traslladar-te que estem molt satisfetes de tot el suport i estima de la gent que heu cregut en nosaltres, del teu recolzament econòmic però també emocional, la teva confiança en nosaltres a fet possible tirar endavant aquest projecte.</mj-text>
+        <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">Volem traslladar-te que estem molt satisfetes de tot el suport i estima de la gent que heu cregut en nosaltres, del teu recolzament econòmic però també emocional, la teva confiança en nosaltres ha fet possible tirar endavant aquest projecte.</mj-text>
         <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">Aquest èxit és compartit amb tu, ja que sense tu, no hagués estat possible. No tenim paraules que descriguin el profund agraïment que sentim.</mj-text>
         <mj-text align="justify" font-size="14px" color="#45474e" padding-bottom="10px" padding-top="10px" line-height="18px">I per celebrar-ho, estem començant a moure fils per poder brindar i festejar juntes per l'assoliment d'aquesta fita compartida. En les properes setmanes et farem arribar informació més detallada. Estigues atenta a les properes notícies!</mj-text>
+        <mj-text align="center" font-size="24px" color="#d03c15" padding-bottom="20px" padding-top="20px" line-height="30px"><b>Us sentim ben aprop</b></mj-text>
+        <mj-image src="https://cancarner.cat/can-carner/" alt="Can Carner" padding-bottom="0px" padding-top="0px" href="https://cancarner.cat/"></mj-image>
       </mj-column>
-    </mj-section>
-    <mj-section vertical-align="middle" background-color="#d03c15">
-      <mj-column width="100%" vertical-align="middle">
-        <mj-text align="left" font-size="14px" color="#ffffff" padding-bottom="0px" padding-top="0px"><span style="font-size: 24px; line-height: 30px;">Us sentim ben a prop</span></mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section vertical-align="middle" background-url="https://cancarner.cat/can-carner/" background-size="cover" background-repeat="no-repeat" padding-top="130px">
     </mj-section>
     <mj-section background-color="#ffffff" full-width="full-width">
       <mj-column width="100%" vertical-align="middle">
